--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,5 +17,10 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+HANUL_DEBUG_KEYSTORE=/Users/gotaegeon/.android/debug.keystore
+HANUL_DEBUG_STORE_PASSWORD=android
+HANUL_DEBUG_ALIAS=androiddebugkey
+HANUL_DEBUG_ALIAS_PASSWORD=android
+
 android.useAndroidX=true
 android.enableJetifier=true
